--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
-DB_NAME=skypro_cw7 (название БД в postgresql)
+DB_NAME=skypro_cw8 (название БД в postgresql)
 DB_USER=postgres (логин пользователя для подключения к БД в postgresql)
 DB_PASSWORD=12345 (пароль пользователя БД в postgresql)
-DB_HOST=127.0.0.1 (хост подключения к БД)
+DB_HOST=db (хост подключения к БД в контейнере)
 DB_PORT=5432 (порт подключения к БД)
 TELEBOT_KEY= (токен телеграм бота)
